Looking good cross browser, sorted flicker issue and added placeholder for time input also changed the bands for good / bad weather

--- a/app/styles/directives/journeys.scss
+++ b/app/styles/directives/journeys.scss
@@ -151,18 +151,20 @@
 	}
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 460px) {
 	.journeys {
-		.temp {
-			font-size: 4.0em;
-		}
 		.stats{
+			margin-top: 20px;
+
 			li {
-				font-size: 1.0em;
-				margin-top: 15px;
+				margin: 0;
+				width: 100%;
 			}
 		}
 		.descr {
+			p {
+				width: 100%;
+			}
 			i {
 				font-size: 7.0em;
 			}
