--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -127,3 +127,14 @@ button.btn {
 .hidden {
 	display: none;
 }
+
+.add-journey {
+	margin-bottom: 30px;
+}
+
+// RESPONSIVE GLOBAL STYLES
+@media only screen and (max-width: 460px) {
+	.container {
+		padding: 0;
+	}
+}
